# careful_rm

./: .gitignore  LICENSE  README.md  README.rst  careful_rm.alias.sh  careful_rm.plugin.zsh  careful_rm.py  setup.cfg  setup.py
