[metadata]
description-file = README.rst

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and 3
universal=1

[build]
# This tries to force the executable to be any python
executable=/usr/bin/env python

[build_scripts]
# This tries to force the executable to be any python
executable=/usr/bin/env python
